# SELF-RAG

./: .gitignore  Pipfile  README.md  gradio_app.py  gradio_app_endee.py  ingestion.py  ingestion_endee.py  main.py  pyproject.toml  streamlit_app.py
.chroma/: chroma.sqlite3
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
graph/: consts.py  graph.py  state.py
graph/chains/: answer_grader.py  generation.py  hallucination_grader.py  retrieval_grader.py
graph/chains/tests/: test_chains.py
graph/chains/tests/.chroma/: chroma.sqlite3
graph/nodes/: __init__.py  generate.py  grade_documents.py  retrieve.py  web_search.py
